# axum-template

./: .env.liquid  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.liquid  DATABASE_README.md  Dockerfile  Dockerfile.liquid  README.md  README.md.liquid  USAGE.md  USER_GUIDE.md  cargo-generate.toml  docker-compose.yaml  docker-compose.yaml.liquid  fly.toml  justfile  justfile.liquid
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml.liquid
.github/workflows/: audit.yml  build-template.yml  cd.yml  ci.yml
migrations/: 20251229154054_initial_schema.sql  20251229154254_seed_data.sql
scripts/: generate.sh
src/: app.rs  lib.rs.liquid  main.rs  main.rs.liquid
src/common/: app_state.rs  bootstrap.rs  config.rs  dto.rs  error.rs  hash_util.rs  jwt.rs  mod.rs  opentelemetry.rs  pagination.rs  ts_format.rs  validated_json.rs
src/db/: mod.rs
src/db/postgres/: mod.rs
src/domain/auth/: mod.rs
src/domain/auth/api/: handlers.rs  routes.rs
src/domain/auth/domain/: model.rs  repository.rs  service.rs
src/domain/auth/dto/: auth_dto.rs
src/domain/auth/infra/: postgres_repository.rs  postgres_service.rs
src/domain/user/: mod.rs
src/domain/user/api/: handlers.rs  routes.rs
src/domain/user/domain/: model.rs  repository.rs  service.rs
src/domain/user/dto/: user_dto.rs
src/domain/user/infra/: postgres_repository.rs  postgres_service.rs
src/static_support/: mod.rs
