# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{description}}"
authors = ["{{authors}}"]
edition = "2021"
rust-version = "1.68"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/{{github_user}}/{{project-name}}"
homepage = "https://github.com/{{github_user}}/{{project-name}}"
repository = "https://github.com/{{github_user}}/{{project-name}}"
keywords = ["{{project-name}}"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "{{project-name}}
path = "src/main.rs"

[dependencies]
axum = "0.6.15"
{% if static_support %}
# https://docs.rs/axum-extra/latest/axum_extra/
axum-extra = "0.7.3"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
{% endif %}
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "any", "postgres"] }